--- a/template.Rmd
+++ b/template.Rmd
@@ -7,7 +7,7 @@ output: github_document
 library(tidyverse)
 ```
 
-Let's important a datset.
+Let's import a datset.
 
 ```{r}
 litters_df = 
@@ -37,5 +37,22 @@ Sometimes skimming data is neat?
 
 ```{r}
 skimr::skim(litters_df)
+```
+
+## Fix the missingness
+
+```{r}
+litters_df = 
+  read_csv("data_import_examples/FAS_litters.csv", na = c("NA", ".", ""))
+```
+
+Import the FAS pups dataset.
+
+```{r}
+pups_df = 
+  read_csv("data_import_examples/FAS_pups.csv", na = c("NA", ".", ""), skip = 3)
+
+pups_df = 
+  janitor::clean_names(pups_df)
 ```
 
