--- a/template.Rmd
+++ b/template.Rmd
@@ -5,6 +5,8 @@ output: github_document
 
 ```{r}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 Let's import a datset.
@@ -54,5 +56,40 @@ pups_df =
 
 pups_df = 
   janitor::clean_names(pups_df)
+```
+
+## Okay what about excel
+
+CSVs are really great but sometimes you get an excel file.
+
+```{r}
+mlb_df = 
+  read_excel("data_import_examples/mlb11.xlsx")
+```
+
+Import LotR word counts.
+
+```{r}
+fotr_df =
+  read_excel("data_import_examples/LotR_Words.xlsx", range = "B3:D6")
+```
+
+## SAS?
+
+Import the PULSE data
+
+```{r}
+pulse_df =
+  read_sas("data_import_examples/public_pulse_data.sas7bdat")
+
+pulse_df = 
+  janitor::clean_names(pulse_df)
+```
+
+## Why do I hate read.csv so much??
+
+```{r, eval = FALSE}
+litters_df_base =
+  read.csv("data_import_examples/FAS_litters.csv") #doesn't print as nicely as read_csv
 ```
 
