--- a/template.Rmd
+++ b/template.Rmd
@@ -93,3 +93,8 @@ litters_df_base =
   read.csv("data_import_examples/FAS_litters.csv") #doesn't print as nicely as read_csv
 ```
 
+## What about data exporting?
+
+```{r}
+write_csv(fotr_df, "data_import_examples/fotr_df.csv")
+```
