--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -121,3 +121,54 @@ filter(pups_df, sex == 1)
 filter(pups_df, pd_walk < 11, sex == 2)
 ```
 
+## `mutate`
+
+use `mutate()` to create or modify variables.
+
+```{r}
+mutate(
+  litters_df,
+  wt_gain = gd18_weight - gd0_weight,
+  group = str_to_lower(group) #makes string vars lowercase
+  )
+```
+
+## `arrange`
+
+`arrange()` arranges things
+
+```{r}
+arrange(litters_df, pups_born_alive)
+arrange(litters_df, group, pups_born_alive) #nested (first by group and then born alive within each group)
+arrange(litters_df, desc(pups_born_alive)) #in descending order
+
+arrange(litters_df, gd0_weight) #puts missing values at the end
+```
+
+## PIPES
+
+Use pipes to avoid clunky/unreadable code.
+
+```{r}
+litters_df = 
+  read_csv("data_import_examples/FAS_litters.csv", na = c("NA", ".", "")) |> #pipe operator is command shift M
+  janitor::clean_names() |> 
+  select(group, litter_number, starts_with("gd")) |> 
+  drop_na() |> 
+  mutate(
+    wt_gain = gd18_weight - gd0_weight
+  )
+```
+
+Try this on the pups dataset.
+
+```{r}
+pups_df = 
+  read_csv("data_import_examples/FAS_pups.csv", skip = 3, na = c("NA", ".", "")) |> 
+  janitor::clean_names() |> 
+  filter(sex == 1) |> 
+  select(-pd_ears) |> 
+  mutate(
+    pd_pivot_7 = pd_pivot >= 7 
+  )
+```
